# basex

./: .gitignore  BENCHMARKS.md  BLOG_POST.md  CMakeLists.txt  LICENSE  MEDIUM_POST.md  PROJECT_PLAN.md  README.md  generate_social_graphics.sh
benchmark_data/: benchmark.sh  code_sample.c  json_data.json  json_large.json  text_data.txt  text_sample.txt
include/: basex.h
man/: base122.1  base85.1  base91.1  zbase122.1  zbase32.1  zbase64.1  zbase85.1  zbase91.1
social_media_graphics/: README.md
src/cli/: base122_cli.c  base85_cli.c  base91_cli.c  zbase122_cli.c  zbase32_cli.c  zbase64_cli.c  zbase85_cli.c  zbase91_cli.c  zbase91_cli.c.old
src/libbasex/: base122.c  base32.c  base64.c  base85.c  base91.c  common.c  cpu_detect.c
src/libbasex/simd/: base122_avx2.c  base85_avx2.c  base91_avx2.c
